--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
     text-align: center;   
 }
 
-a .main{
+.main{
     border: 6px solid #9412BC;
     background-color: #52EFBA;
     border-radius: 3px;
